--- a/templates/passwords.html
+++ b/templates/passwords.html
@@ -5,17 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title> Cyber Security Awareness Module </title>
+    <title> Password Security </title>
 
     <link type="text/css" rel="stylesheet" href="static/css/csam.css">
 
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 
     <link rel="apple-touch-icon" sizes="76x76" href="static/images/favicons/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="static/images/favicons/apple-touch-icon-180x180.png">
     <link rel="icon" type="image/png" href="static/images/favicons/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="static/images/favicons/android-chrome-192x192.png" sizes="192x192">
-    <link rel="icon" type="image/png" href="static/images/favicons/favicon-96x96.png" sizes="96x96">
     <link rel="shortcut icon" href="static/images/favicons/favicon.ico">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -26,34 +23,26 @@
 </head>
 
 <body data-spy="scroll" data-target="#sidebar">
-    <header class="navbar navbar-right navbar-full navbar-light" role="banner">
-        <div class="clearfix">
-            <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2"> &#9776; </button>
-        </div>
-        <div class="collapse navbar-toggleable-xs" id="bd-main-nav">
-            <nav class="nav navbar-nav">
 
-                <div class="pull-xs-left">
-                    <a class="nav-item nav-link" href="{{ url_for('index') }}"> Home </a>
-                </div>
-
-                <div class="pull-xs-right">
-                    <a class="nav-item nav-link active" href="{{ url_for('passwords') }}"> Passwords </a>
-                    <a class="nav-item nav-link" href="{{ url_for('social_eng') }}"> Social Engineering </a>
-                    <a class="nav-item nav-link" href="{{ url_for('browser') }}"> Browser Security </a>
-                    <a class="nav-item nav-link" href="{{ url_for('mobile') }}"> Mobile Security </a>
-                </div>
-
-            </nav>
-        </div>
+    <header class="navbar navbar-right navbar-full navbar-light hidden-sm-down" role="banner">
+        <nav class="nav navbar-nav">
+            <div class="pull-xs-left">
+                <a class="nav-item nav-link" href="{{ url_for('index') }}"> Home </a>
+            </div>
+            <div class="pull-xs-right">
+                <a class="nav-item nav-link active" href="{{ url_for('passwords') }}"> Passwords </a>
+                <a class="nav-item nav-link" href="{{ url_for('social_eng') }}"> Social Engineering </a>
+                <a class="nav-item nav-link" href="{{ url_for('browser') }}"> Browser Security </a>
+                <a class="nav-item nav-link" href="{{ url_for('mobile_quiz') }}"> Mobile Security </a>
+            </div>
+        </nav>
     </header>
 
     <div class="container-fluid hidden-md-up p-x-0">
-        <div class="row m-t-2">
-            <div class="container-fluid">
-                <div class="card">
-                    <div class="card-block text-xs-center">
-                        <h3> Unfortunately, this content is unable to be viewed on this resolution. Please view it on a computer or change the orientation of your tablet. </h3> </div>
+        <div class="row">
+            <div class="card">
+                <div class="card-block text-xs-center">
+                    <h3> Unfortunately, this content is unable to be viewed on this resolution. Please view it on a computer or change the orientation of your tablet. </h3>
                 </div>
             </div>
         </div>
@@ -72,21 +61,16 @@
         <div class="row">
             <div class="container">
                 <div id="content-container" class="row">
+
                     <div class="col-md-2">
-                        <div class="card card-block" id="sidebar">
+                        <div id="sidebar">
                             <nav>
                                 <ul id="sidebar-links" class="nav nav-pills nav-stacked">
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#complexity"> Password Strength </a>
-                                    </li>
+                                    <li class="nav-item"> <a class="nav-link" href="#complexity"> Password Strength </a> </li>
                                     <hr>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#exercise"> Password Cracking </a>
-                                    </li>
+                                    <li class="nav-item"> <a class="nav-link" href="#exercise"> Password Cracking </a> </li>
                                     <hr>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#default-passwords"> Default Passwords </a>
-                                    </li>
+                                    <li class="nav-item"> <a class="nav-link" href="#default-passwords"> Default Passwords </a> </li>
                                 </ul>
                             </nav>
                         </div>
@@ -99,7 +83,7 @@
 
                             <h5> What is a strong password? </h5>
 
-                            <ul class="real-list">
+                            <ul>
                                 <li> A strong password contains a combination of both uppercase and lowercase letters, digits, and symbols. </li>
                                 <li> It has at least 8 characters. </li>
                                 <li> It doesn't contain common words or phrases. </li>
@@ -107,22 +91,22 @@
 
                             <h5> Why do we need strong passwords? </h5>
 
-                            <ul class="real-list">
+                            <ul>
                                 <li> A <i>brute force attack</i> is a method of cracking passwords that tries all possible character combinations to find a password.
-                                    <ul class="real-list">
+                                    <ul>
                                         <li> A total of 2.1 &middot; 10<sup>11</sup> possibilities exist in a password consisting of 8 lowercase letters. </li>
                                         <li> A total of 2.8 &middot; 10<sup>12</sup> possibilities exist in a password consisting of 8 mixed-case letters. </li>
                                         <li> In general, the more types of characters and the more characters you have in your password, the better. </li>
                                         <li> Time is the only limiting factor in a brute force attack. </li>
-                                        <li> <b>Any</b> password can be found using this method, given time. </li>
+                                        <li>>Any password can be found using this method, given time. </li>
                                         <li> This type of attack exploits those with short passwords, usually under 8 characters. </li>
                                     </ul>
                                 </li>
                             </ul>
 
-                            <ul class="real-list">
+                            <ul>
                                 <li> A <i>dictionary attack</i> is a method that compares your password to a list of commonly used or previously cracked passwords.
-                                    <ul class="real-list">
+                                    <ul>
                                         <li> No matter how long or complex a password is, it will be found if it is in the list. </li>
                                         <li> Unlike a brute force attack, dictionary attacks are not limited by time. </li>
                                         <li> The limitation is whether or not the password is in the list. </li>
@@ -228,7 +212,7 @@
 
                             <h5> What are default passwords? </h5>
 
-                            <ul class="real-list">
+                            <ul>
                                 <li> Manufacturers provide default usernames and passwords to make the initial setup of a device simpler. </li>
                                 <li> Default credentials are also used whenever a device is reset back to factory settings. </li>
                                 <li> Default passwords are usually simple, and not unique to each individual device. </li>
@@ -265,18 +249,35 @@
     <script src="static/js/util.js"></script>
     <script src="static/js/scrollspy.js"></script>
     <script>
-        $('body').scrollspy({target: '#sidebar', offset: ($(window).height() * .15)});
-        $(document).ready(function() {
-          $('a[href^="#"]').click(function(e) {
-            e.preventDefault();
-            $(window).stop(true).scrollTo(this.hash, {
-                duration : 700,
-                interrupt : true,
-                offset : -50,
-                easing : "swing"
-            });
-          });
+        $('body').scrollspy({
+            target: '#sidebar',
+            offset: ($(window).height() * .15)
         });
+
+        $(document).ready(function () {
+            $.ajax({
+                url: 'http://d2hqmzmqawf6yu.cloudfront.net/' + 'basicDictionary.txt',
+                async: true,
+                cache: true,
+                dataType: 'text',
+                success: function (data) {
+                    dict = data;
+
+                    dictionaryAttack = dict.split('\n');
+                }
+            });
+
+            $('a[href^="#"]').click(function (e) {
+                e.preventDefault();
+                $(window).stop(true).scrollTo(this.hash, {
+                    duration: 700,
+                    interrupt: true,
+                    offset: -50,
+                    easing: "swing"
+                });
+            });
+        });
+    </script>
     </script>
 </body>
 
